<resources>
    <string name="app_name">날씨콕</string>
    <string name="who_go_with">누구랑 가세요?</string>
    <string name="where_to_go">어디로 가세요?</string>
    <string name="when_to_go">언제 가세요?</string>
    <string name="start_the_app">시작하기</string>
    <string name="what_is_this_app">날씨콕</string>
    <string name="what_is_this_app_title">날씨콕</string>
    <string name="when_calendar">달력</string>
    <string name="where_hint_search">동/읍/면 주소 입력</string>
    <string name="input_error_title">모든 일정이 입력되지 않았습니다!</string>
    <string name="addition_error_title">지역은 5군데 까지만 저장이 가능합니다.</string>
    <string name="input_error_contents">- 정보를 확인해 주세요</string>
    <string name="addition_error_contents">- 새로운 곳을 추가하시려면 기존에 등록한 지역을 지워주세요.</string>
    <string name="schedule_hint">등록된 날씨콕</string>
    <string name="what_is_this_app_contents">&#160;가고자 하는 지역,\n
        가는 날짜를 지정해두시면\n
        \n
        기상청에서 날씨 정보가\n
        업데이트 됨과 동시에\n
        변하는 날씨를\n
        \n
        날씨콕이 알려드려요!</string>
    <string name="title_home">홈</string>
    <string name="title_search">검색</string>
    <string name="title_coming_soon">공개 예정</string>
    <string name="title_saved_contents">저장한 콘텐츠 목록</string>
    <string name="title_else">더 보기</string>
    <string name="rules"><u>이용 약관</u></string>
    <string name="loading">로딩중입니다.</string>
    <string name="network_error">네트워크 연결이 원활하지 않습니다.</string>

    <string name="kakao_app_key">8840e96dccbe4d47b743fac5571c312c</string>
    <string name="kakao_scheme">kakao8840e96dccbe4d47b743fac5571c312c</string>
    <string name="kakao_link">kakaolink.com</string>
    <string name="nav_header_desc">"nav_header_desc"</string>
    <string name="nav_header_title">"nav_header_title"</string>
    <string name="nav_header_subtitle">"nav_header_subtitle"</string>

    <string name="name_kok">날씨콕</string>
    <string name="weather_alarm">날씨알람</string>
    <string name="sharing">공유하기</string>
    <string name="ad_delete">광고제거</string>
    <string name="ad">AD</string>
    <string name="graph">인기어플</string>
    <string name="contact">문의하기</string>
<<<<<<< HEAD
    <string name="terms">개인정보처리방침</string>
=======
>>>>>>> bf5f93840116430a1a1916dde84260ef469ebeed

    <string name="dates">8월 20일 (금)</string>
    <string name="location">서귀포시 서흥동</string>
    <string name="temperature">34\u00B0</string>
    <string name="max_min_temper">최고 36\u00B0 최저 22\u00B0</string>
    <string name="forecast">&#160;기상청\n&#160;&#160;&#160;보기</string>
    <string name="ad_kor">광고</string>
    <string name="dates_list1">9/13(금)</string>
    <string name="dates_list2">날짜없음</string>
    <string name="location_list1">광주 신가동</string>
    <string name="location_list2">지역없음</string>
    <string name="weather_list1">날씨없음</string>
    <string name="now_weather">현재날씨보기</string>
    <string name="now_place">( 현재위치 )</string>
    <string name="bm_weather">날씨콕보기</string>
    <string name="day_list1">일</string>
    <string name="day_list2">오늘</string>
    <string name="min_temper">22\u00B0</string>
    <string name="max_temper">36\u00B0</string>
    <string name="weekly_fcst">주&#160;간&#160;예&#160;보</string>
    <string name="degrees">기온단위(\u00B0C)</string>
<<<<<<< HEAD
    <string name="AmPm">오전&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;오후</string>
    <string name="min_max">최고/최저</string>
=======
    <string name="AmPm">오전&#160;&#160;&#160;&#160;&#160;&#160;오후</string>
    <string name="min_max">최저/최고</string>
>>>>>>> bf5f93840116430a1a1916dde84260ef469ebeed
    <string name="weather_icon">날씨 아이콘</string>

    <string name="weather">맑음</string>
    <string name="rain">비</string>
    <string name="rain_snow">비/눈</string>
    <string name="snow">눈</string>
    <string name="shower">소나기</string>
    <string name="gray">흐림</string>
    <string name="cloudy">구름\n많음</string>
    <string name="permission_title">날씨콕 이용안내</string>
    <string name="permission_info">날씨콕을 이용하려면,\n아래의 권한을 허용해 주세요.</string>

    <string name="permission_audio">혈당 측정기와 통신하기 위해 필요합니다.</string>
    <string name="permission_audio_title">오디오 녹음</string>
    <string name="permission_storage">측정결과를 파일로 공유하기 위해 필요합니다.</string>
    <string name="permission_storage_title">외부 저장소 쓰기</string>
    <string name="permission_location">현재 위치에 대한 날씨를 가져오기 위해 필요합니다.\n - 현재 위치 정보를 가져와 현재 위치에 대한 날씨 정보를 가져오는데에 사용합니다.</string>
    <string name="permission_location_title">위치 접근</string>
    <string name="permission_camera">사용자의 주소록에 접근 하기 위해 필요합니다.</string>
    <string name="permission_camera_title">주소록 접근 권한</string>
    <string name="withdraw_title">회원 탈퇴</string>
    <string name="withdraw_msg">동의하시면 지금 로그인된 %1$s 으로 로그인할 수 없고, 같은 이메일로는 다시 재가입할 수 없습니다.</string>
    <string name="withdraw_agree">동의</string>
    <string name="permission_ok">허용하기</string>
    <string name="noti_channel_id">지금 동기화 중입니다.</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="share_not_install">설치되지 않았습니다.</string>
<<<<<<< HEAD
    <string name="facebook_app_id">554714239145809</string>
    <string name="facebook_client_token">3be229a7293e3277df40e20f784bfe3f</string>
    <string name="fb_login_protocol_scheme">3be229a7293e3277df40e20f784bfe3f</string>

    <string name="share_message">날씨에 진지한 어플! 보기쉬운 어플!\n
선택해둔 날짜에, 가고자하는 지역의 시시각각 변하는 날씨 정보를 때마다 확인하지 않아도 알려드려요!
지금 다운받으세요~\n
\n
링크 누르고 어플 다운받기 : http://play.google.com/store/apps/details?id=</string>

    <string name="shorts_weather_key">NljL1Ufv3SwxP1jLruLZuSqx5j+WLs4OTZ2ZJ/tzMCU4ANbLDr80AtG2ix+YRIBSmsSweVdhlN3qbLT8KF37bg==</string>
    <string name="holiday_key">NljL1Ufv3SwxP1jLruLZuSqx5j+WLs4OTZ2ZJ/tzMCU4ANbLDr80AtG2ix+YRIBSmsSweVdhlN3qbLT8KF37bg==</string>
    <string name="mid_weather_key">NljL1Ufv3SwxP1jLruLZuSqx5j+WLs4OTZ2ZJ/tzMCU4ANbLDr80AtG2ix+YRIBSmsSweVdhlN3qbLT8KF37bg==</string>

    <string name="forcast_url">https://www.weather.go.kr/w/index.do</string>
    <string name="play_store_url">http://play.google.com/store/apps/details?id=</string>

    <string name="ad_mob_id">ca-app-pub-3940256099942544~3347511713</string>
<!--    ca-app-pub-8790624440733975~2626104354-->
    <string name="ad_mob_unit_id">ca-app-pub-3940256099942544/6300978111</string>
<!--    ca-app-pub-8790624440733975/5060696004-->

    <string name="alarm_title">날씨정보가 업데이트되었습니다!</string>
    <string name="alarm_message">변경된 날씨를 지금 확인하세요.</string>

    <string name="vworld_key">972E51FE-7AEA-3D7F-8AF1-DE08FCD4E069</string>

    <string name="naver_client_id">wvxfkhqxo1</string>
    <string name="naver_client_secret">DXSRXGF8wpxx8mHLVb79OI0EsmD7n84DBZQYAh9x</string>
=======
    <string name="facebook_app_id">515975726169096</string>
    <string name="fb_login_protocol_scheme">fb515975726169096</string>


>>>>>>> bf5f93840116430a1a1916dde84260ef469ebeed
</resources>