<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_what_is_this_app"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:text="@string/weather_icon"
            android:textSize="30sp"
            android:fontFamily="@font/imcresoojin"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_close_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/sunny"/>
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/weather"
            android:fontFamily="@font/cafe24ohsquareair"
            android:textSize="25dp"/>
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/cloudy"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/cloudy"
            android:fontFamily="@font/cafe24ohsquareair"
            android:textSize="25dp"/>
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/gray"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/gray"
            android:fontFamily="@font/cafe24ohsquareair"
            android:textSize="25dp"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/rain"/>
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/rain"
            android:fontFamily="@font/cafe24ohsquareair"
            android:textSize="25dp"/>
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/shower"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/shower"
            android:fontFamily="@font/cafe24ohsquareair"
            android:textSize="25dp"
            android:autoSizeTextType="uniform" />
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/rain_snow"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/rain_snow"
            android:fontFamily="@font/cafe24ohsquareair"
            android:textSize="25dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/snow"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/snow"
            android:fontFamily="@font/cafe24ohsquareair"
            android:textSize="25dp"/>
    </LinearLayout>

    </LinearLayout>

</LinearLayout>