<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl_now_weather_center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/iv_arrow_right"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            android:background="@color/transparent"
            android:src="@drawable/arrow_right" />

        <TextView
            android:id="@+id/tv_bm_weather_go"
            android:layout_width="30dp"
            android:layout_height="150dp"
            android:layout_below="@+id/iv_arrow_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_vertical_go"
            android:fontFamily="@font/cafe24ohsquareair"
            android:gravity="center"
            android:text="@string/bm_weather"
            android:textSize="18dp"
            android:textStyle="bold"></TextView>


        <TextView
            android:id="@+id/tv_now_weather_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/cafe24ssurroundair"
            android:text="@string/now_place"
            android:textSize="20dp"></TextView>

        <TextView
            android:id="@+id/tv_now_weather_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_now_weather_place"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/imcresoojin"
            android:gravity="center"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/location"
            android:textSize="20dp"></TextView>

        <TextView
            android:id="@+id/tv_now_weather_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_now_weather_location"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:fontFamily="@font/cafe24ssurroundair"
            android:text="@string/weather"
            android:textSize="25dp"></TextView>

        <TextView
            android:id="@+id/tv_now_weather_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_now_weather_condition"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/imcresoojin"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/temperature"
            android:textSize="80dp"></TextView>

        <TextView
            android:id="@+id/tv_now_weather_max_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_now_weather_temperature"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/cafe24ssurroundair"
            android:text="@string/max_min_temper"
            android:textSize="20dp"></TextView>

        <TextView
            android:id="@+id/tv_now_weather_forecast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_now_weather_max_min"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_forecast_line"
            android:fontFamily="@font/cafe24ohsquareair"
            android:padding="5dp"
            android:text="@string/forecast"
            android:textColor="#FFFFFF"
            android:textSize="15dp"></TextView>

    </RelativeLayout>