<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_weather_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".weather.WeatherActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_bm_weather_menu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_menu_24"></ImageView>

        <ImageView
            android:id="@+id/iv_bm_weather_add"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_add_24"></ImageView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rl_bm_weather_center">

        <TextView
            android:id="@+id/tv_now_weather_go"
            android:layout_width="35dp"
            android:layout_height="250dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_forecast_line"
            android:gravity="center"
            android:text="@string/now_weather"
            android:fontFamily="@font/imcresoojin"
            android:textSize="20dp"></TextView>

        <TextView
            android:id="@+id/tv_bm_weather_dates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/imcresoojin"
            android:text="@string/dates"
            android:textSize="20dp"></TextView>

        <TextView
            android:id="@+id/tv_bm_weather_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_bm_weather_dates"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/imcresoojin"
            android:text="@string/location"
            android:textSize="30dp"></TextView>

        <TextView
            android:id="@+id/tv_bm_weather_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_bm_weather_location"
            android:text="@string/weather"
            android:layout_gravity="center"
            android:fontFamily="@font/imcresoojin">
        </TextView>

        <TextView
            android:id="@+id/tv_bm_weather_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_bm_weather_condition"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/imcresoojin"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/temperature"
            android:textSize="80dp"></TextView>

        <TextView
            android:id="@+id/tv_bm_weather_max_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_bm_weather_temperature"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/imcresoojin"
            android:text="@string/max_min_temper"
            android:textSize="20dp"></TextView>

        <TextView
            android:id="@+id/tv_bm_weather_forecast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_now_weather_go"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_forecast_line"
            android:fontFamily="@font/imcresoojin"
            android:padding="5dp"
            android:text="@string/forecast"
            android:textSize="20dp"></TextView>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_bm_weather_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/ad_kor"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:layout_below="@+id/now_weather"
        android:layout_margin="15dp"
        android:padding="8dp"
        android:background="@drawable/bg_forecast_line"
        ></TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_bookmark_wx_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>