<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_menu_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.MainActivity">

    <ImageView
        android:id="@+id/iv_menu_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"></ImageView>

    <TextView
        android:id="@+id/tv_menu_logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="3dp"
        android:text="@string/name_kok"
        android:textSize="20dp"
        android:fontFamily="@font/imcresoojin"/>

    <ImageView
        android:id="@+id/iv_menu_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:src="#000000"></ImageView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:id="@+id/rl_1st"
        >

        <ImageView
            android:id="@+id/iv_menu_alarm"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_alarm_24"></ImageView>

        <TextView
            android:id="@+id/tv_menu_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/iv_menu_alarm"
            android:fontFamily="@font/imcresoojin"
            android:padding="5dp"
            android:text="@string/weather_alarm"
            android:textSize="30dp"></TextView>

        <Switch
            android:id="@+id/sw_menu_alarm"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:textSize="40dp"></Switch>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        >

        <ImageView
            android:id="@+id/iv_menu_share"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_share_24">
        </ImageView>

    <TextView
        android:id="@+id/tv_menu_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/sharing"
        android:textSize="30dp"
        android:fontFamily="@font/imcresoojin"></TextView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        >

        <ImageView
            android:id="@+id/iv_menu_ad_delete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_ad_delete_24"></ImageView>

        <TextView
            android:id="@+id/tv_menu_ad_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/iv_menu_ad_delete"
            android:fontFamily="@font/imcresoojin"
            android:padding="5dp"
            android:text="@string/ad_delete"
            android:textSize="30dp"></TextView>

        <TextView
            android:id="@+id/tv_menu_ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_ad_line"
            android:fontFamily="@font/imcresoojin"
            android:padding="5dp"
            android:text="@string/ad"
            android:textSize="15dp"></TextView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        >

        <ImageView
            android:id="@+id/iv_menu_graph"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_graph_24">
        </ImageView>

        <TextView
            android:id="@+id/tv_menu_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginLeft="10dp"
            android:text="@string/graph"
            android:fontFamily="@font/imcresoojin"
            android:textSize="30dp"></TextView>
    </LinearLayout>

</LinearLayout>